[tool.poetry]
name = "pypi-playground-root"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
poethepoet = "*"
setuptools-scm = "*"
build = "*"
twine = "*"
# https://github.com/python-poetry/poetry/issues/9293
docutils = "!=0.21.post1"
mypy = "*"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]

format-all = [
    {cmd = "ruff format", cwd = "packages/kitsuyui-hello"},
    {cmd = "ruff format", cwd = "packages/kitsuyui-animal"},
]
check-all = [
    {cmd = "ruff check", cwd = "packages/kitsuyui-hello"},
    {cmd = "ruff check", cwd = "packages/kitsuyui-animal"},
    {cmd = "mypy --namespace-packages --explicit-package-bases src tests", cwd = "packages/kitsuyui-hello"},
    {cmd = "mypy --namespace-packages --explicit-package-bases src tests", cwd = "packages/kitsuyui-animal"},
]
test-all = [
    {cmd = "pytest tests", cwd = "packages/kitsuyui-hello"},
    {cmd = "pytest tests", cwd = "packages/kitsuyui-animal"},
]
lock-all = [
    {cmd = "poetry lock", cwd = "packages/kitsuyui-hello"},
    {cmd = "poetry lock", cwd = "packages/kitsuyui-animal"},
    {cmd = "poetry lock"},
]
install-all = [
    {cmd = "poetry install", cwd = "packages/kitsuyui-hello"},
    {cmd = "poetry install", cwd = "packages/kitsuyui-animal"},
    {cmd = "poetry install"},
]
update-all = [
    {cmd = "poetry update", cwd = "packages/kitsuyui-hello"},
    {cmd = "poetry update", cwd = "packages/kitsuyui-animal"},
    {cmd = "poetry update"},
]
coverage-all = [
    {cmd = "pytest --cov=src --doctest-modules --cov-report=xml tests", cwd = "packages/kitsuyui-hello"},
    {cmd = "pytest --cov=src --doctest-modules --cov-report=xml tests", cwd = "packages/kitsuyui-animal"},
]
build-all = [
    { cmd = "python -m build", cwd = "packages/kitsuyui-hello" },
    { cmd = "python -m build", cwd = "packages/kitsuyui-animal" },
]
check-publish-all = [
    { cmd = "twine check dist/*", cwd = "packages/kitsuyui-hello" },
    { cmd = "twine check dist/*", cwd = "packages/kitsuyui-animal" },
]
clean-all = [
    { cmd = "rm -rf dist", cwd = "packages/kitsuyui-hello" },
    { cmd = "rm -rf dist", cwd = "packages/kitsuyui-animal" },
]

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.ruff]
line-length = 79
