[project]
name = "pypi-playground-root"
dynamic = ["version"]
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/kitsuyui/pypi-playground"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "poethepoet",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "kitsuyui",
]

[tool.poe.tasks]

format = { cmd = "./bin/run-each format" }
check = { cmd = "./bin/run-each check" }
syntax_check = { cmd = "./bin/run-each syntax_check" }
sync-all = { cmd = "./bin/run-each sync" }
type_check = { cmd = "./bin/run-each type_check" }
test = { cmd = "./bin/run-each test" }
coverage = { cmd = "./bin/run-each coverage" }
build = { cmd = "./bin/run-each build" }

