[project]
name = "dev-shared"
dynamic = ["version"]
description = "dev-shared"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.10"

dependencies = [
    "pytest>=9.1.1,<10",
    "pytest-mock>=3,<4",
    "pytest-cov>=7,<8",
    "poethepoet>=0.48.0,<1",
    "setuptools-scm>=10.2.0,<11",
    "ruff>=0.15.21,<1",
    "mypy>=2.1.0,<3",
    "ty>=0.0.1a32,<0.1",
]
